[package]
name = "esperto-fit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dotenvs = "0.1.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
teloxide = { version = "0.12.2", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
